# loto2025_2

./: .gitignore  check_station_coverage.py  constants.py  loterias.db  main.py  mis_resultados  pic_stations.py  pyproject.toml  requirements.txt
db_utils/: db_management.py  load_weather_data.py  santi_rows.py
lotto_analysis/: data_processing.py
other_utils/: date_utils.py  fase_lunar.py  file_utils.py  humidity_meteostat.py  prevision_temp_hr.py  ranking_semanal.py  ranking_semanal_bck.py
other_utils/weekly/: __init__.py  engine.py  forecast.py  format.py  types.py
scripts/: dump_forecast_fixtures.py  smoke_weekly_main.py  smoke_weekly_output.py
tests/fixtures/forecast/: madrid.json  paris.json
web_utils/: get_web_loto_results.py
webapi/: app.py  schemas.py
